# orpheus-engine

./: .cursorrules  .dockerignore  .gitignore  .gitmodules  .tool-versions  AGENT.md  README.md  archive_old_urls.py  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: docker-build.yml
deploy/docker/: Dockerfile_dagster  Dockerfile_user_code  dagster.yaml  docker-compose.yml  workspace.yaml
docker_deploy/: Dockerfile  dagster.yaml
notebooks/: Untitled.ipynb  attempt-2.ipynb
orpheus_engine/: definitions.py  schedules.py
orpheus_engine/defs/: __init__.py
orpheus_engine/defs/agh_fulfillment_zenventory/: __init__.py  definitions.py  resources.py
orpheus_engine/defs/ai/: resources.py
orpheus_engine/defs/airtable/: assets.py  config.py  definitions.py  generated_ids.py  resources.py
orpheus_engine/defs/airtable_raw_all_bases/: definitions.py
orpheus_engine/defs/analytics/: definitions.py
orpheus_engine/defs/dbt/: definitions.py
orpheus_engine/defs/dlt/: __init__.py  assets.py  definitions.py  warehouse_loaders.py
orpheus_engine/defs/ducklake/: definitions.py
orpheus_engine/defs/genderize/: resources.py
orpheus_engine/defs/geocoder/: resources.py
orpheus_engine/defs/loops/: definitions.py  resources.py
orpheus_engine/defs/loops_campaign_and_metrics_export/: __init__.py  definitions.py
orpheus_engine/defs/shared/: __init__.py  address_utils.py
orpheus_engine/defs/slack/: definitions.py  resources.py
orpheus_engine/defs/slack_users_sync/: __init__.py  definitions.py
orpheus_engine/defs/sling/: assets.py  definitions.py
orpheus_engine/defs/unified_ysws_db/: __init__.py  definitions.py
orpheus_engine/defs/ysws_programs_sync/: definitions.py
orpheus_engine/defs/zenventory_inventory_airtable_sync/: definitions.py
orpheus_engine_dbt/: .gitignore  dbt_project.yml
orpheus_engine_dbt/models/: sources.yml
orpheus_engine_dbt/models/finance_2026_analytics/: major_gifts.sql  metadata.sql  monthly_summary.sql
orpheus_engine_dbt/models/hackatime_analytics/: daily_activity.sql  hourly_project_activity.sql
orpheus_engine_dbt/models/hackatime_legacy_analytics/: hackatime_legacy_hourly_project_activity.sql
orpheus_engine_dbt/models/hcb_analytics/: ledger.sql  orgs.sql  user_positions.sql  users.sql
orpheus_engine_dbt/models/loops_analytics/: hack_clubbers.sql
orpheus_engine_dbt/models/spring_2026_analytics/: spring_2026_metadata.sql  unified_time_log.sql
orpheus_engine_dbt/models/unified_analytics/: event_priorities.sql  events.sql  unified_hack_clubbers.sql
playground/: .gitignore  get_github_contribution_chart.py  github_commit_stats_v2.py  loops_extraction.py  multi_search_in_tmux  ysws_mcp_test_clean.py  ysws_project_link_search_test.py  ysws_project_mention_search.py  ysws_project_search_test_w_reddit_api.py
scripts/: cancel_orphaned_runs.py  ducklake_common.sh  ducklake_console.sh  ducklake_ui.sh  generate_airtable_ids.py  start.sh  ysws_project_describer.py  ysws_project_mention_search.py
scripts/ducklake-sync/unified-row-hash/: README.md  benchmark.sh  benchmark_100col.sh  row_hash.sql
warehouse-mcp/: .dockerignore  .gitignore  Dockerfile  cache.py  db.py  pyproject.toml  server.py  warehouse_docs.py
warehouse-postgres-docker/: Dockerfile  README.md  conf.sh
warehouse-postgres-docker/backup/: pgbackrest-backup.sh  pgbackrest-diff.service  pgbackrest-diff.timer  pgbackrest-full.service  pgbackrest-full.timer
warehouse-postgres-docker/pg_rowhash/: Makefile  pg_rowhash.c  rowhash--1.0.sql  rowhash.control
