[project]
name = "orpheus_engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    # Core Dagster packages on 1.10.x versioning
    "dagster>=1.10.10,<1.11.0",
    "dagster-cloud>=1.10.10,<1.11.0",
    "dagster-webserver>=1.10.10,<1.11.0",
    
    # Dagster extension packages on 0.26.x versioning
    "dagster-postgres>=0.26.10,<0.27.0",
    "dagster-aws>=0.26.10,<0.27.0",
    "dagster-docker>=0.26.10,<0.27.0",
    "dagster-dlt>=0.26.10,<0.27.0",
    "dagster-sling>=0.26.10,<0.27.0",
    "dagster-dbt>=0.26.10,<0.27.0",
    "dagster-embedded-elt>=0.26.10,<0.27.0",
    
    # Non-dagster dependencies
    "psycopg2-binary",
    "python-dotenv",
    "polars",
    "requests",
    "dlt[postgres]",
    "googlemaps",
    "litellm>=1.66.1",
    "pyairtable",
    "dbt-core>=1.7.0,<2.0.0",
    "dbt-postgres>=1.7.0,<2.0.0",
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "orpheus_engine.definitions"
code_location_name = "orpheus_engine"

[tool.setuptools.packages.find]
exclude=["orpheus_engine_tests"]
