[project]
name = "orpheus_engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    # Core Dagster packages on 1.11.x versioning
    "dagster>=1.11.14,<1.12.0",
    "dagster-cloud>=1.11.14,<1.12.0",
    "dagster-webserver>=1.11.14,<1.12.0",
    # Dagster extension packages on 0.27.x versioning
    "dagster-postgres>=0.27.14,<0.28.0",
    "dagster-aws>=0.27.14,<0.28.0",
    "dagster-docker>=0.27.14,<0.28.0",
    "dagster-dlt>=0.27.14,<0.28.0",
    "dagster-sling>=0.27.14,<0.28.0",
    "dagster-dbt>=0.27.14,<0.28.0",
    "dagster-embedded-elt>=0.27.14,<0.28.0",
    # Non-dagster dependencies
    "psycopg2-binary",
    "python-dotenv",
    "polars[all]",
    "requests",
    "dlt[postgres]",
    "googlemaps",
    "litellm>=1.66.1",
    "pyairtable",
    "dbt-core>=1.7.0,<2.0.0",
    "dbt-postgres>=1.7.0,<2.0.0",
    "PyYAML",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "connectorx>=0.3.3",
    "pyod>=2.0.5",
    "scikit-learn>=1.6.1",
    "joblib>=1.5.0",
    "scipy>=1.13.1",
    "tqdm>=4.67.1",
    "python-rapidjson>=1.20",
    "tldextract>=5.3.0",
    "metaod>=0.0.2",
    "seaborn>=0.13.2",
    "openai>=1.75.0",
    "pydantic>=2.11.3",
    "aiohttp>=3.11.16",
    "beautifulsoup4>=4.12.0",
    "pypandoc-binary>=1.13",
    "duckdb>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
    "ipykernel",
    "notebook",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "orpheus_engine.definitions"
code_location_name = "orpheus_engine"

[tool.setuptools.packages.find]
exclude=["orpheus_engine_tests"]
