[project]
name = "warehouse-mcp"
version = "0.1.0"
description = "HTTP MCP server for read-only data warehouse queries"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "psycopg[binary]>=3.1.0",
    "psycopg-pool>=3.1.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
    "sse-starlette>=2.0.0",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]


